Hero Section Creation

--- a/index.html
+++ b/index.html
@@ -1,12 +1,35 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <title>Conf Bs As</title>
+    <style></style>
 </head>
+
 <body>
-    <h1>Conf Bs As</h1>
+    <header>
+        <nav>
+            <div>logo</div>
+            <div>navigation</div>
+        </nav>
+
+        <div>
+            <h1>Conf Bs As</h1>
+            <p>Bs As llega por primera vez a Argentina. Un evento para compartir con
+                nuestra comunidad el conocimiento y experiencia de los expertos que están creando el futuro de internet.
+                Ven a conocer a miembros del
+                evento, a otros estudiantes de Codo a Codo y a los oradores de primer
+                nivel que tenemos para ti. Te esperamos!</p>
+            <a href="#" class="btn">Comprar Tickets</a>
+        </div>
+    </header>
+    <section></section>
 </body>
+
 </html>
