Hero Section Finished

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <a class="nav-link " href="#">Conviértete En Orador</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-success" href="#">Comprar Tickets</a>
+            <a class="nav-link" href="#"><div class="ctcolor">Comprar Tickets</div></a>
           </li>
 
         </ul>
@@ -50,20 +50,23 @@
   <section class="dark-bg" id="hero">
     <div class="row">
       <div class="col">
-
-        <div class="container">
-          <div class="text-light">
-            <h1>Conf BsAs</h1>
-            <p>BsAs llega por primera vez a Argentina. Un evento para compartir con nuestra comunidad el conocimiento y experiencia
-              de los expertos que están creando el futuro de internet. Ven a conocer a miembros del evento, a otros estudiantes de Codo a Codo y los 
-              oradores de primer nivel que tenemos para ti. Te esperamos!</p>
-              <button type="button" class="btn btn-outline-light btn-lg">Quiero ser orador</button>
-              <button type="button" class="btn btn-1 btn-lg text-light">Comprar Tickets</button>
+        <div class="container-fluid">
+          <div class="box-intro">
+            <div class="text-light">
+              <h1 class="tx-title">Conf BsAs</h1>
+              <p class="tx-p">BsAs llega por primera vez a Argentina. Un evento para compartir con nuestra comunidad el conocimiento y experiencia
+                de los expertos que están creando el futuro de internet. Ven a conocer a miembros del evento, a otros estudiantes de Codo a Codo y los
+                oradores de primer nivel que tenemos para ti. Te esperamos!</p>
+                <div class="bns">
+                  <button type="button" class="btn btn-outline-light btn-lg">Quiero ser orador</button>
+                  <button type="button" class="btn bg-success btn-lg text-light">Comprar Tickets</button>
+                </div>
+            </div>
           </div>
         </div>
 
       </div>
-    </div>
+    
   </section>
 
 
