Card almost done

--- a/index.html
+++ b/index.html
@@ -65,10 +65,40 @@
           </div>
         </div>
 
-      </div>
-    
+      </div> 
   </section>
 
+  <section>
+    <div class="row">
+      <div class="cardsection" style="text-align: center;">
+        <p class="orators-1">CONOCE A LOS</p>
+        <h2 class="orators-2">ORADORES</h2>
+      </div>
+        <div class="col-sm"><div class="card-1" style="width: 22rem;">
+          <img src="img/steve.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <div class="btns"></div>
+            <h5 class="card-title">Steve Jobs</h5>
+            <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis obcaecati, molestiae reprehenderit alias officia quae mollitia reiciendis. Aliquid nam recusandae perferendis repellendus. Officiis rerum recusandae ab modi. </p>
+          </div>
+        </div></div>
+        <div class="col-sm"><div class="card-2" style="width: 22rem;">
+          <img src="img/bill.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Bill Gates</h5>
+            <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis obcaecati at recusandae itaque porro dicta ipsam autem modi quae incidunt pariatur, ipsa consectetur placeat, odit, debitis provident nihil fugiat deserunt!.</p>
+          </div>
+        </div></div>
+        <div class="col-sm"><div class="card-3" style="width: 22rem;">
+          <img src="img/ada.jpeg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Ada Lovelace</h5>
+            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ipsum sapiente, nemo doloremque maxime officia minus quos perspiciatis ducimus hic adipisci fugiat optio similique, corrupti omnis mollitia voluptatum error dolore?</p>
+          </div>
+        </div>
+            </div>
+      </div>   
+  </section>
 
 
   <!-- JavaScript Bundle with Popper -->
