--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
             <a class="nav-link " href="#">Conviértete En Orador</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#"><div class="ctcolor">Comprar Tickets</div></a>
+            <a class="nav-link" href="#">
+              <div class="ctcolor">Comprar Tickets</div>
+            </a>
           </li>
 
         </ul>
@@ -54,52 +56,95 @@
           <div class="box-intro">
             <div class="text-light">
               <h1 class="tx-title">Conf BsAs</h1>
-              <p class="tx-p">BsAs llega por primera vez a Argentina. Un evento para compartir con nuestra comunidad el conocimiento y experiencia
-                de los expertos que están creando el futuro de internet. Ven a conocer a miembros del evento, a otros estudiantes de Codo a Codo y los
+              <p class="tx-p">BsAs llega por primera vez a Argentina. Un evento para compartir con nuestra comunidad el
+                conocimiento y experiencia
+                de los expertos que están creando el futuro de internet. Ven a conocer a miembros del evento, a otros
+                estudiantes de Codo a Codo y los
                 oradores de primer nivel que tenemos para ti. Te esperamos!</p>
-                <div class="bns">
-                  <button type="button" class="btn btn-outline-light btn-lg">Quiero ser orador</button>
-                  <button type="button" class="btn bg-success btn-lg text-light">Comprar Tickets</button>
-                </div>
+              <div class="bns">
+                <button type="button" class="btn btn-outline-light btn-lg">Quiero ser orador</button>
+                <button type="button" class="btn bg-success btn-lg text-light">Comprar Tickets</button>
+              </div>
             </div>
           </div>
         </div>
 
-      </div> 
+      </div>
   </section>
 
-  <section>
+  <div class="container">
     <div class="row">
       <div class="cardsection" style="text-align: center;">
         <p class="orators-1">CONOCE A LOS</p>
         <h2 class="orators-2">ORADORES</h2>
-      </div>
-        <div class="col-sm"><div class="card-1" style="width: 22rem;">
+      </div>  
+      <div class="col-4">
+        <div class="card-1" style="width: 22rem;">
           <img src="img/steve.jpg" class="card-img-top" alt="...">
           <div class="card-body">
-            <div class="btns"></div>
+            <div class="btns">
+              <button class="btn bg-warning btn-sm btn-card text-center fw-bold lh-1">JavaScript</button>
+              <button class="btn bg-info btn-sm text-light btn-card fw-bold lh-1 ">React</button>
+            </div>
             <h5 class="card-title">Steve Jobs</h5>
-            <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis obcaecati, molestiae reprehenderit alias officia quae mollitia reiciendis. Aliquid nam recusandae perferendis repellendus. Officiis rerum recusandae ab modi. </p>
-          </div>
-        </div></div>
-        <div class="col-sm"><div class="card-2" style="width: 22rem;">
-          <img src="img/bill.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Bill Gates</h5>
-            <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis obcaecati at recusandae itaque porro dicta ipsam autem modi quae incidunt pariatur, ipsa consectetur placeat, odit, debitis provident nihil fugiat deserunt!.</p>
-          </div>
-        </div></div>
-        <div class="col-sm"><div class="card-3" style="width: 22rem;">
-          <img src="img/ada.jpeg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Ada Lovelace</h5>
-            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ipsum sapiente, nemo doloremque maxime officia minus quos perspiciatis ducimus hic adipisci fugiat optio similique, corrupti omnis mollitia voluptatum error dolore?</p>
+            <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis obcaecati, molestiae
+              reprehenderit alias officia quae mollitia reiciendis. Aliquid nam recusandae perferendis repellendus.
+              Officiis rerum recusandae ab modi. </p>
           </div>
         </div>
+      </div>
+      <div class="col-4">
+        <div class="card-2" style="width: 22rem;">
+          <img src="img/bill.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <div class="btns">
+              <button class="btn bg-warning btn-sm btn-card text-center fw-bold lh-1">JavaScript</button>
+              <button class="btn bg-info btn-sm text-light btn-card fw-bold lh-1 ">React</button>
             </div>
-      </div>   
-  </section>
+            <h5 class="card-title">Bill Gates</h5>
+            <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis obcaecati at
+              recusandae itaque porro dicta ipsam autem modi quae incidunt pariatur, ipsa consectetur placeat, odit,
+              debitis provident nihil fugiat deserunt!.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-4">
+        <div class="card-3" style="width: 22rem">
+          <img src="img/ada.jpeg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <div class="btns">
+              <button type="button" class="btn btn-sm btn-secondary btn-card fw-bold lh-1">Negocios</button>
+              <button type="button" class="btn btn-danger btn-sm btn-card fw-bold lh-1">Startups</button>
+            </div>
+            <h5 class="card-title">Ada Lovelace</h5>
+            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ipsum sapiente, nemo
+              doloremque maxime officia minus quos perspiciatis ducimus hic adipisci fugiat optio similique, corrupti
+              omnis mollitia voluptatum error dolore?</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
+  <div class="container-fluid">
+    <div class="row ">
+        <div class="col hnl">
+            <img src="img\honolulu.jpg" alt="" width="100%">
+        </div>
+        <div class="col bg-dark txt">
+            <div class="container-fluid p-3 text-light">
+                <h4>Bs As - Octubre</h3>
+                <p>Buenos Aires es la provincia y localidad más grande del estado de Argentina, en los Estados Unidos. Honolulu es la más sureña de entre las principales ciudades estadounidenses. Aunque el nombre  de Honolulu se refiere al área urbana en la costa sureste de la isla de Oahu, la ciudad y el condado de Honolulu han formado una ciudad-condado consolidada que cubre toda la ciudad (aproximadamente 600km2 de superficie).</p>
+                <div class="container">
+                    <button type="button" class="btn btn-outline-light">Conocé más</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+  
 
   <!-- JavaScript Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
