--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark navbar-color">
-    <div class="container">
+  <nav class="navbar navbar-expand-lg navbar-dark sticky-top navbar-color">
+    <div class="container-fluid">
       <a class="navbar-brand text-light" href="#">
         <img src="img/codoacodo.png" alt="" width="150" height="75" class="d-inline-block align-text-center">
         Conf BsAs
@@ -25,7 +25,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav ms-auto ">
+        <ul class="navbar-nav ms-auto " id="navi">
           <li class="nav-item">
             <a class="nav-link active " aria-current="page" href="#">La Conferencia</a>
           </li>
@@ -63,7 +63,7 @@
                 oradores de primer nivel que tenemos para ti. Te esperamos!</p>
               <div class="bns">
                 <button type="button" class="btn btn-outline-light btn-lg">Quiero ser orador</button>
-                <button type="button" class="btn bg-success btn-lg text-light">Comprar Tickets</button>
+                <button type="button" class="btn btn-lg text-light" id="btn">Comprar Tickets</button>
               </div>
             </div>
           </div>
@@ -78,7 +78,7 @@
         <p class="orators-1">CONOCE A LOS</p>
         <h2 class="orators-2">ORADORES</h2>
       </div>
-      <div class="col-4">
+      <div class="col-3">
         <div class="card-1" style="width: 22rem;">
           <img src="img/steve.jpg" class="card-img-top" alt="...">
           <div class="card-body">
@@ -93,7 +93,7 @@
           </div>
         </div>
       </div>
-      <div class="col-4">
+      <div class="col-3">
         <div class="card-2" style="width: 22rem;">
           <img src="img/bill.jpg" class="card-img-top" alt="...">
           <div class="card-body">
@@ -108,8 +108,8 @@
           </div>
         </div>
       </div>
-      <div class="col-4">
-        <div class="card-3" style="width: 22rem">
+      <div class="col-3">
+        <div class="card-3" id="c3" style="width: 22rem">
           <img src="img/ada.jpeg" class="card-img-top" alt="...">
           <div class="card-body">
             <div class="btns">
