Footer Almost Done

--- a/index.html
+++ b/index.html
@@ -126,20 +126,6 @@
     </div>
   </div>
 
-<!-- 
-  <div class="row">
-    <div class="col-6"><img id="hnl"src="img/honolulu.jpg" alt="honolulu"></div>
-    <div class="col-6"><h4>Bs As - Octubre</h4>
-    <p>Buenos Aires es la provincia y localidad más grande del estado de Argentina, en los Estados Unidos. honolulu es la<br>más sureña de entre las principales ciudades estadounidense. Aunque el nombre de honolulu se refiere al área<br>urbana en la costa sureste de la isla de ohau, la ciudad y el condado honolulu han formado una ciudad-<br>condado consolidada que cubre toda la ciudad (aproximatamente 600 km² de superficie). 
-     </p>
-     <div class="container">
-      <button type="button" class="btn btn-outline-light">Conocé más</button>
-    </div>
-  </div>
-  </div> -->
-
-
-
     <div class="row ">
       <div class="col-6">
         <img src="img\honolulu.jpg" alt="" width="100%">
@@ -157,9 +143,6 @@
       </div>
     </div>
    
-
-
-
     <div class="container">
       <div class="row">
         <div class="cardsection" style="text-align: center;">
@@ -185,7 +168,42 @@
           </div>
       </div>
     </div>
+  </div>
   
+   
+      <nav class="navbar navbar-expand-lg navbar-dark ftnav">
+    <div class="container-fluid">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ms-auto elft">
+          <li class="nav-item">
+            <a class="nav-link active " aria-current="page" href="#" id="Qs">Preguntas <br> Frecuentes</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link " href="#" id="Cn">Contáctanos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link " href="#" id="Pr">Prensa</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link " href="#" id="Cf">Conferencias</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#" id="Tc">Términos y<br>condiciones</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link"  href="#" id="Pv">Privacidad</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#" id="Es">Estudiantes</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
   <!-- JavaScript Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
