--- a/index.html
+++ b/index.html
@@ -51,19 +51,22 @@
 
   <section class="dark-bg" id="hero">
     <div class="row">
-      <div class="col">
+      <div class="col-sm-11 col-1">
         <div class="container-fluid">
           <div class="box-intro">
-            <div class="text-light">
-              <h1 class="tx-title">Conf BsAs</h1>
-              <p class="tx-p">BsAs llega por primera vez a Argentina. Un evento para compartir con nuestra comunidad el
-                conocimiento y experiencia
-                de los expertos que están creando el futuro de internet. Ven a conocer a miembros del evento, a otros
-                estudiantes de Codo a Codo y los
-                oradores de primer nivel que tenemos para ti. Te esperamos!</p>
-              <div class="bns">
-                <button type="button" class="btn btn-outline-light btn-lg">Quiero ser orador</button>
-                <button type="button" class="btn btn-lg text-light" id="btn">Comprar Tickets</button>
+            <div class="col-sm-12">
+              <div class="text-light">
+                <h1 class="tx-title">Conf BsAs</h1>
+                <p class="tx-p">BsAs llega por primera vez a Argentina. Un evento para compartir con nuestra comunidad
+                  el
+                  conocimiento y experiencia
+                  de los expertos que están creando el futuro de internet. Ven a conocer a miembros del evento, a otros
+                  estudiantes de Codo a Codo y los
+                  oradores de primer nivel que tenemos para ti. Te esperamos!</p>
+                <div class="bns">
+                  <button type="button" class="btn btn-outline-light btn-lg">Quiero ser orador</button>
+                  <button type="button" class="btn btn-lg text-light" id="btn">Comprar Tickets</button>
+                </div>
               </div>
             </div>
           </div>
@@ -71,14 +74,13 @@
 
       </div>
   </section>
-
   <div class="container">
     <div class="row">
       <div class="cardsection" style="text-align: center;">
         <p class="orators-1">CONOCE A LOS</p>
         <h2 class="orators-2">ORADORES</h2>
       </div>
-      <div class="col-3">
+      <div class="col-sm-3 col-1">
         <div class="card-1" style="width: 22rem;">
           <img src="img/steve.jpg" class="card-img-top" alt="...">
           <div class="card-body">
@@ -93,7 +95,7 @@
           </div>
         </div>
       </div>
-      <div class="col-3">
+      <div class="col-sm-3 col-1">
         <div class="card-2" style="width: 22rem;">
           <img src="img/bill.jpg" class="card-img-top" alt="...">
           <div class="card-body">
@@ -108,7 +110,7 @@
           </div>
         </div>
       </div>
-      <div class="col-3">
+      <div class="col-sm-3 col-1">
         <div class="card-3" id="c3" style="width: 22rem">
           <img src="img/ada.jpeg" class="card-img-top" alt="...">
           <div class="card-body">
@@ -126,52 +128,55 @@
     </div>
   </div>
 
-    <div class="row ">
-      <div class="col-6">
-        <img src="img\honolulu.jpg" alt="" width="100%">
-      </div>
-      <div class="col-6 p-3 bg-dark text-light" >
-          <h4>Bs As - Octubre</h3>
-            <p class="text-light">Buenos Aires es la provincia y localidad más grande del estado de Argentina, en los Estados Unidos.
-              Honolulu es la más sureña de entre las principales ciudades estadounidenses. Aunque el nombre de Honolulu
-              se refiere al área urbana en la costa sureste de la isla de Oahu, la ciudad y el condado de Honolulu han
-              formado una ciudad-condado consolidada que cubre toda la ciudad (aproximadamente 600km2 de superficie).
-            </p>
-            <div class="container">
-              <button type="button" class="btn btn-outline-light">Conocé más</button>
-            </div>
-      </div>
+  <div class="row ">
+    <div class="col-sm-6">
+      <img src="img\honolulu.jpg" alt="" width="100%">
     </div>
-   
-    <div class="container">
-      <div class="row">
-        <div class="cardsection" style="text-align: center;">
-          <p class="con-1">CONVIÉRTETE EN UN</p>
-          <h2 class="orators-2">ORADOR</h2>
-          <p class="ign">Anótate como orador para dar una <abbr title="">charla ignite</abbr>. Cuéntanos de qué quieres hablar!</p>
+    <div class="col-sm-6 col-12 p-3 bg-dark text-light">
+      <h4>Bs As - Octubre</h3>
+        <p class="text-light">Buenos Aires es la provincia y localidad más grande del estado de Argentina, en los
+          Estados Unidos.
+          Honolulu es la más sureña de entre las principales ciudades estadounidenses. Aunque el nombre de Honolulu
+          se refiere al área urbana en la costa sureste de la isla de Oahu, la ciudad y el condado de Honolulu han
+          formado una ciudad-condado consolidada que cubre toda la ciudad (aproximadamente 600km2 de superficie).
+        </p>
+        <div class="container">
+          <button type="button" class="btn btn-outline-light">Conocé más</button>
         </div>
+    </div>
+  </div>
+
+  <div class="container">
+    <div class="row">
+      <div class="cardsection" style="text-align: center;">
+        <p class="con-1">CONVIÉRTETE EN UN</p>
+        <h2 class="orators-2">ORADOR</h2>
+        <p class="ign">Anótate como orador para dar una <abbr title="">charla ignite</abbr>. Cuéntanos de qué quieres
+          hablar!</p>
+      </div>
       <div class="container">
         <div class="row p-3">
-          <div class="col">
+          <div class="col-sm-6 col-1">
             <input type="text" class="form-control" id="nm" placeholder="Nombre" aria-label="First name">
           </div>
-          <div class="col">
+          <div class="col-sm-6 col-1">
             <input type="text" class="form-control" id="sn" placeholder="Apellido" aria-label="Last name">
           </div>
         </div>
-          <div class="form-floating">
-            <textarea class="form-control" id="ff" placeholder="Sobre qué quieres hablar!" style="height: 100px;color: #6b686f;">Sobre qué quieres hablar!</textarea>
-          </div>
-          <p id="rt">Recuerda incluir un título para tu charla</p>
-          <div class="d-grid">
-              <button class="btn text-light" id="bttn" type="button">Enviar</button>
-          </div>
+        <div class="form-floating">
+          <textarea class="form-control" id="ff" placeholder="Sobre qué quieres hablar!"
+            style="height: 100px;color: #6b686f;">Sobre qué quieres hablar!</textarea>
+        </div>
+        <p id="rt">Recuerda incluir un título para tu charla</p>
+        <div class="d-grid">
+          <button class="btn text-light" id="bttn" type="button">Enviar</button>
+        </div>
       </div>
     </div>
   </div>
-  
-   
-      <nav class="navbar navbar-expand-lg navbar-dark ftnav">
+
+
+  <nav class="navbar navbar-expand-lg navbar-dark ftnav">
     <div class="container-fluid">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -195,7 +200,7 @@
             <a class="nav-link" href="#" id="Tc">Términos y<br>condiciones</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link"  href="#" id="Pv">Privacidad</a>
+            <a class="nav-link" href="#" id="Pv">Privacidad</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#" id="Es">Estudiantes</a>
